carousel fix on stretch

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,3 +1,10 @@
 .intro-header {
-	padding: 1rem;
+  padding: 1rem;
+}
+img.gallery-image {
+  width: auto !important;
+  height: 100px;
+  .slick-slide img {
+    width: auto;
+  }
 }
